save devs : mutli services types handling